# Gamified-to-do-list-A.I.-GENERATED-

./: README.md
server/: .gitignore  CMakeLists.txt
server/Mobile App Server/: CMakeLists.txt  Mobile App Server.cpp  SocialController.cpp  SocialController.h
the app/: .gitignore  gradle.properties  settings.gradle.kts
the app/app/: build.gradle.kts
the app/app/src/androidTest/java/com/example/proiectkotlin/: ExampleInstrumentedTest.kt
the app/app/src/main/: AndroidManifest.xml
the app/app/src/main/java/com/example/proiectkotlin/data/: Task.kt  TaskRepository.kt  TaskStatus.kt  User.kt
the app/app/src/main/java/com/example/proiectkotlin/data/local/: AppDatabase.kt  Converters.kt  TaskDao.kt
the app/app/src/main/java/com/example/proiectkotlin/data/remote/: DrogonApi.kt  DrogonResponse.kt  RetrofitClient.kt  UserCredentials.kt  UserStats.kt
the app/app/src/main/java/com/example/proiectkotlin/ui/: MainActivity.kt
the app/app/src/main/java/com/example/proiectkotlin/ui/screen/: LoginScreen.kt  SocialScreen.kt  TaskScreen.kt
the app/app/src/main/java/com/example/proiectkotlin/ui/theme/: Color.kt  Theme.kt  Type.kt
the app/app/src/main/java/com/example/proiectkotlin/ui/viewmodel/: SocialViewModel.kt  TaskViewModel.kt  UserViewModel.kt
the app/app/src/main/java/com/example/proiectkotlin/worker/: NotificationWorker.kt
the app/app/src/main/res/values/: strings.xml  themes.xml
the app/app/src/test/java/com/example/proiectkotlin/: ExampleUnitTest.kt
the app/gradle/: libs.versions.toml
the app/gradle/wrapper/: gradle-wrapper.properties
